# nemotron_sdg

./: BREV_LAUNCHABLE.md  Nemotron_3_Nano_30B_A3B_A100.ipynb  reward_server_hf.py  run_nemotron_grm_sft.py  run_reward_server.sh  test_llm_local.py  train_grm_sft.py
brev/: helper.py  nemotron_sdg_demo.ipynb  requirements.txt  setup.sh
sdg/SDG_network/: .gitignore  AGENTS.md  README.md  VERSIONING.md  code_crime_classification.ipynb  code_crime_classified.csv  code_crime_classified.parquet  code_vulnerability_seed.csv  doc_crime_classified.csv  doc_crime_classified.parquet  document_crime_injection.ipynb  document_seed.csv  enron_crime_classified.csv  enron_crime_classified.parquet  enron_crime_injected.csv  enron_crime_injected.parquet  enron_crime_injection.ipynb  enron_seed_emails.csv  enron_seed_scored.parquet  generate_grm_sft_data.py  greptile.json  grm_sft_top5_test.jsonl  main.py  mkdocs.yml  pyproject.toml  test.py  test_a2a.py
sdg/SDG_network/.claude/agents/: docs-searcher.md  github-searcher.md
sdg/SDG_network/artifacts/code-crime-classification/: builder_config.json  metadata.json
sdg/SDG_network/scripts/: update_license_headers.py
sdg/SDG_network/tests_e2e/: pyproject.toml
sdg/SDG_network/tests_e2e/src/data_designer_e2e_tests/plugins/column_generator/: config.py
sdg/SDG_network/tests_e2e/src/data_designer_e2e_tests/plugins/regex_filter/: config.py  impl.py  plugin.py
sdg/SDG_network/tests_e2e/tests/: test_e2e.py  test_e2e_inverse_import_order.py  test_mcp_demo.py
training_data/: code_crime_classified.csv
vllm/: chat_template_llama31.jinja
(+61 files in other folders)
